# g4tutorial2020

./: LICENSE  README.md
P03_C++Tutorial/: C01_WhatisObject_BuiltIn.cc  C02_WhatIsObject_SDLibrary.cc  C03_PointerReference.cc  C04_WhatIsClass.cc  C05_WhatIsInheritance.cc  C06_WhatIsVirtualFunction.cc
P03_C++Tutorial/Z_AnswersDir/: C01_WhatisObject_BuiltIn_Ans.cc  C02_WhatIsObject_SDLibrary_Ans.cc  C03_PointerReference_Ans.cc  C04_WhatIsClass_Ans.cc  C05_WhatIsInheritance_Ans.cc  C06_WhatIsVirtualFunction_Ans.cc
P04_FirstStep/source/: Application_Main.cc
P04_FirstStep/source/src/: Geometry.cc  UserActionInitialization.cc
P04_FirstStep/util/Help/: Build_P04_FirstStep.sh
P04_FirstStep/util/Macros/: GlobalSetup.mac  myFirstMacro.mac  verboseSetup.mac
P05_Geometry/source/: CMakeLists.txt
P05_Geometry/util/G4Codes/: Geometry.cc_P05_BGO_One  Geometry.cc_P05_BGO_Two  Geometry.cc_P05_Pixel_Four  Geometry.cc_P05_Pixel_One  Geometry.cc_P05_WaterContainer  Geometry.cc_P05_WaterExtruded
P05_Geometry/util/Help/: Build_P05_BGO_One.sh  Build_P05_BGO_Two.sh  Build_P05_Pixel_Four.sh  Build_P05_Pixel_One.sh  Build_P05_WaterBox.sh  Build_P05_WaterContainer.sh  Build_P05_WaterExtruded.sh
P05_Geometry/util/Macros/: GlobalSetup.mac  visSetup_Simplex.mac
P06_PrimaryGenerator/source/src/: PrimaryGenerator.cc
P06_PrimaryGenerator/util/G4Codes/: Geometry.cc_MagField  PrimaryGenerator.cc_GPS  PrimaryGenerator.cc_Gun  PrimaryGenerator.cc_Gun_MagField  PrimaryGenerator.cc_MyGen  PrimaryGenerator.cc_MyGen_MagField  PrimaryGenerator.hh_GPS  PrimaryGenerator.hh_Gun  PrimaryGenerator.hh_Gun_MagField  (+1 more)
P08_Scoring/source/: Application_Main.cc
P09_Analysis/source/: Application_Main.cc  CMakeLists.txt
P09_Analysis/source-CS/: Application_Main.cc
P09_Analysis/source/include/: Analysis.hh  PrimaryGenerator.hh  SensitiveVolume.hh
P09_Analysis/source/src/: PrimaryGenerator.cc  RunAction.cc  SensitiveVolume.cc  UserActionInitialization.cc
(+54 files in other folders)
